--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>محاسبه قیمت محصول</title>
-    <link rel="apple-touch-icon" href="icon.png"> <!-- اضافه کردن آیکون -->
+
+    <!-- آیکون برای هوم اسکرین آیفون -->
+    <link rel="apple-touch-icon" sizes="180x180" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAALQAAAC0CAIAAACyr5FlAAAAtmVYSWZNTQAqAAAACAAFARoABQAAAAEAAABKARsABQAAAAEAAABS">
+
     <style>
         body { font-family: Arial, sans-serif; background: #f0f4f8; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
         .container { background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 400px; width: 100%; text-align: center; }
