--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>محاسبه قیمت محصول</title>
-
-    <!-- آیکون برای هوم اسکرین آیفون -->
-    <link rel="apple-touch-icon" sizes="180x180" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAALQAAAC0CAIAAACyr5FlAAAAtmVYSWZNTQAqAAAACAAFARoABQAAAAEAAABKARsABQAAAAEAAABS">
-
     <style>
         body { font-family: Arial, sans-serif; background: #f0f4f8; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
         .container { background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); max-width: 400px; width: 100%; text-align: center; }
@@ -32,7 +28,7 @@
             return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
         function calculate() {
-            const TAX_RATE = 1.2, MULTIPLIER = 25.5; 
+            const TAX_RATE = 1.2, MULTIPLIER = 26; // مقدار تغییر داده شد
             let inputCode = document.getElementById("inputCode").value.trim();
             inputCode = toEnglishNumber(inputCode);
             if (!/^\d+$/.test(inputCode)) {
