--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>محاسبه قیمت محصول</title>
+    <title>محاسبه قیمت حدودی محصول</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -88,7 +88,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>محاسبه قیمت محصول</h2>
+        <h2>محاسبه قیمت حدودی محصول</h2>
         <label for="inputCode">لطفاً کد روی محصول را وارد کنید:</label>
         <input type="text" id="inputCode" placeholder="مثال: ۱۲۳۴">
         <button onclick="calculate()">محاسبه قیمت</button>
